--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 p{
-    font-size: 1 rem;
+    font-size: 3 rem;
     color: #000;
 }
 
@@ -96,7 +96,7 @@ nav a{
 
 .textbox p{
     margin: 10px 0 40px;
-    font-size: 16px;
+    font-size: 18px;
     color:#fff;
 }
 
@@ -155,17 +155,21 @@ h1{
     font-size: 36px;
     font-weight: 600;
 }
+h3{
+    font-size: 24px;
+    font-weight: 600;
+}
 
 p{
     color: rgb(2, 2, 2);
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
 }
 
 .row{
-    margin-top: 5%;
+    margin-top: 3%;
     display: flex;
     justify-content: space-between;
 }
@@ -180,7 +184,7 @@ p{
 }
 
 #map {
-    height: 70vh;
+    height: 80vh;
   }
   
 .map{
@@ -197,5 +201,20 @@ h1{
     padding-bottom: 100px;
 }
 
-
+.button {
+    background-color: #ffffff; /* Green */
+    color: green;
+    border: flex
+    ,flex-direction,#4CAF50;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+  }
+.button:hover{
+    background-color: #4CAF50; /* Green */
+    color: white;
+}
 
