--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     min-height: 100vh;
     min-width: 10rem;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/hintergrund.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/hintergrund2.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -102,6 +102,13 @@ nav a{
 
 nav #icons{
     display: none;
+}
+
+.material-icons-outlined { 
+    font-size: 36px !important;
+    color: #fff;
+    
+
 }
 
 
@@ -204,8 +211,7 @@ h1{
 .button {
     background-color: #ffffff; /* Green */
     color: green;
-    border: flex
-    ,flex-direction,#4CAF50;
+    border: 2px solid #4CAF50;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -213,8 +219,15 @@ h1{
     font-size: 16px;
     transition-duration: 0.4s;
   }
+
+
 .button:hover{
     background-color: #4CAF50; /* Green */
     color: white;
+}
+
+a{
+    margin: auto;
+    padding-bottom: 100px;
 }
 
