--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ h1{
     display: inline-block;
     font-size: 16px;
     transition-duration: 0.4s;
+    margin-bottom: 50px;
   }
 
 
@@ -226,8 +227,4 @@ h1{
     color: white;
 }
 
-a{
-    margin: auto;
-    padding-bottom: 100px;
-}
 
